# ffmpeg-cmake

./: CMakeLists.txt  README.md
lib/ffmpeg/: CMakeLists.txt
lib/sdl2/: CMakeLists.txt
lib/x264/: CMakeLists.txt
lib/x265/: CMakeLists.txt
test/: CMakeLists.txt
test2/: CMakeLists.txt  main.cpp
